create sub menu array for the rest of the pages and link them with it

--- a/themes/montessori-theme/sass/_mixins.scss
+++ b/themes/montessori-theme/sass/_mixins.scss
@@ -29,6 +29,8 @@
 
 @mixin flex($align,$justify) {
 	display: flex;
+	display: -webkit-box;
+  display: -ms-flexbox;
 	align-items: $align;
 	justify-content: $justify;
 
