fix the footer, header and more style on the sub menu

--- a/themes/montessori-theme/sass/_about.scss
+++ b/themes/montessori-theme/sass/_about.scss
@@ -30,8 +30,7 @@
 	// General layout
 	.site-content {
 		margin: 0 auto;
-		padding-left: 20;
-		padding-right: 20;
+		padding: 0 auto ;
 	}
 
 	.target {
