--- a/themes/montessori-theme/sass/_footer.scss
+++ b/themes/montessori-theme/sass/_footer.scss
@@ -7,9 +7,7 @@
   @include desktop{
     width:100%;
   }
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  @include flex (center,center);
   font-family: $font_footer_header;
   overflow: hidden;
   font-size: 0.8rem;
@@ -24,11 +22,11 @@
   width: 100%;
   padding: 10px 0 30px 0;
 height: 30px;
-  margin-top:-10px;
+  margin-top:-30px;
   ul{
-  margin-left: 30px;
   padding-left: 0px;
     li{
+      line-height: normal;
       font-size: 1.1rem;
     padding: 0px 10px 0px 10px;
       display: inline-block;
@@ -54,15 +52,14 @@ height: 30px;
   width: 100%;
 text-align: center;
 p{
-margin-bottom: 0px;
-padding-bottom: 0px;
+margin: 0px auto;
 
 i{
   display: inline-block;
   margin: 0px;
-  padding: 4px;
+  padding: 3px;
   margin-right: 5px;
-  width: 22px;
+  width: 24px;
   color: #fff;
   border: solid 1px $white;
   border-radius: 50%;
@@ -84,13 +81,15 @@ i{
   text-align: center;
   text-transform:capitalize;
   p{
-  height: 30px;
-    display:block;
+    margin: 0px;
+  height: 20px;
+    @mixin center-block {}
+    font-size: 1rem;
   }
 }
 /*the links in the footer */
 
-.footer-block-item1 li{
+.footer-block-item1 li{@mixin center-block {}
   a:hover{
     cursor: pointer;
   color: $color_btn_hover_green;
