--- a/themes/montessori-theme/sass/_montessori.scss
+++ b/themes/montessori-theme/sass/_montessori.scss
@@ -184,18 +184,19 @@ body p,li{
 }
 /*Start Resources Section  */
 .green-btn {
-    background-color: #4fc8a1;
-    border-radius: 6px;
-    font-family: Noto Sans;
-    font-size: 20px;
-    font-weight: 700;
-    text-align: center;
-    line-height: 30px;
-    color: #fff;
-    padding: 13px 50px;
-    font-weight: 300;
-    text-shadow: none;
-    letter-spacing: 0.8px;
+  background-color: #4fc8a1;
+  border-radius: 6px;
+  font-family: Noto Sans;
+  font-size: 14px;
+  font-weight: 700;
+  text-align: center;
+  line-height: 28px;
+  color: #fff;
+  padding: 12px 39px;
+  text-shadow: none;
+  letter-spacing: .8px;
+  display: block;
+
     @include desktop {
         display: block;
         width: 331px;
