--- a/themes/montessori-theme/sass/_variables.scss
+++ b/themes/montessori-theme/sass/_variables.scss
@@ -5,11 +5,11 @@ $basic_pading: 0.625rem; /// ==>10px ////
 $basic_margin: 0.625rem; /// ==>10px ////
 $basic_hline_height: 0.625rem; /// ==>10px ////
 ///Screen Size///
-$desktop_width:60rem; //960px
-$Tablet_width:48rem; //768px
-$mobile_width:48rem; //480px for Mobile Container
+$desktop_width:48rem; //768px
+$Tablet_width:37.5rem; //
+$mobile_width:37.5rem; //480px for Mobile Container
 //Layout//
-$mobile_line_height:2.5rem;
+$mobile_line_height:2rem;
 $base_spacing_normal: 1rem;
 $base_spacing_large: 2.5rem;
 $base_spacing_large: 4rem;
