--- a/themes/montessori-theme/style.css
+++ b/themes/montessori-theme/style.css
@@ -274,6 +274,11 @@ mark, ins {
 big {
   font-size: 125%; }
 
+.content-wrapper {
+  max-width: 90%;
+  margin: 0 auto;
+  overflow: auto; }
+
 html {
   box-sizing: border-box;
   font-family: "Noto Sans";
@@ -289,10 +294,10 @@ body {
   background: #fff;
   font-family: "Noto Sans";
   box-sizing: border-box;
-  line-height: 2.5rem;
+  line-height: 2rem;
   margin: 0 auto; }
   body p, body li {
-    line-height: 2.5rem; }
+    line-height: 2rem; }
 
 blockquote, q {
   quotes: "" ""; }
@@ -555,13 +560,13 @@ div .menu-primary-menu-container {
   -ms-flex-pack: justify;
       justify-content: space-between;
   height: 5rem; }
-  @media (min-width: 48rem) {
+  @media (min-width: 37.5rem) {
     .main-navigation-container {
       display: inline-block;
       height: 8rem;
       padding: 0 15px; } }
 
-@media (min-width: 60rem) {
+@media (min-width: 48rem) {
   .menu-primary-menu-container {
     display: inline-block; }
     .menu-primary-menu-container ul li {
@@ -579,16 +584,16 @@ div .menu-primary-menu-container {
 
 div .secondary {
   text-align: right;
-  width: 100%;
+  max-width: 100%;
+  max-height: 100%;
   font-family: "PT Sans";
-  max-height: 100px;
   text-align: right;
   padding-right: 2rem;
   margin-top: 20px;
   background-color: #248E6A; }
-  @media (min-width: 60rem) {
+  @media (min-width: 48rem) {
     div .secondary {
-      white-space: nowrap;
+      white-space: normal;
       overflow: hidden;
       padding: 5px 20 10px 10;
       width: 100%; } }
@@ -615,7 +620,7 @@ div .secondary {
   margin: 10px 0 20px 30px;
   width: 14rem;
   height: 7rem; }
-  @media (min-width: 60rem) {
+  @media (min-width: 48rem) {
     .montessori-logo {
       margin: 0;
       padding: 30px 0 30px 10px;
@@ -641,14 +646,14 @@ div .secondary {
       align-items: center;
   -ms-flex-pack: justify;
       justify-content: space-between; }
-  @media (min-width: 60rem) {
+  @media (min-width: 48rem) {
     .main-menu-wrapper {
       white-space: nowrap;
       overflow: hidden; } }
 
 .site-header {
   z-index: 999;
-  min-width: 48rem;
+  min-width: 37.5rem;
   width: 100%;
   background: rgba(255, 255, 255, 0.7);
   position: fixed;
@@ -666,8 +671,8 @@ div .secondary {
 --------------------------------------------------------------*/
 /* Background*/
 .site-footer {
-  display: -ms-flexbox;
   display: flex;
+  display: -ms-flexbox;
   -ms-flex-align: center;
       align-items: center;
   -ms-flex-pack: center;
@@ -679,7 +684,7 @@ div .secondary {
   height: 150px;
   background-color: #125A50;
   color: #fff; }
-  @media (min-width: 60rem) {
+  @media (min-width: 48rem) {
     .site-footer {
       width: 100%; } }
 
@@ -689,11 +694,11 @@ div .secondary {
   width: 100%;
   padding: 10px 0 30px 0;
   height: 30px;
-  margin-top: -10px; }
+  margin-top: -30px; }
   .footer-block-item1 ul {
-    margin-left: 30px;
     padding-left: 0px; }
     .footer-block-item1 ul li {
+      line-height: normal;
       font-size: 1.1rem;
       padding: 0px 10px 0px 10px;
       display: inline-block; }
@@ -715,14 +720,13 @@ div .secondary {
   width: 100%;
   text-align: center; }
   .footer-block-item2 p {
-    margin-bottom: 0px;
-    padding-bottom: 0px; }
+    margin: 0px auto; }
     .footer-block-item2 p i {
       display: inline-block;
       margin: 0px;
-      padding: 4px;
+      padding: 3px;
       margin-right: 5px;
-      width: 22px;
+      width: 24px;
       color: #fff;
       border: solid 1px #fff;
       border-radius: 50%; }
@@ -740,8 +744,9 @@ div .secondary {
   text-align: center;
   text-transform: capitalize; }
   .footer-block-item3 p {
-    height: 30px;
-    display: block; }
+    margin: 0px;
+    height: 20px;
+    font-size: 1rem; }
 
 /*the links in the footer */
 .footer-block-item1 li a:hover {
@@ -756,13 +761,13 @@ div .secondary {
   width: 480px;
   height: 585px;
   background-color: rgba(0, 0, 0, 0.74); }
-  @media (min-width: 60rem) {
+  @media (min-width: 48rem) {
     .site-main .home-wrapper {
       width: 541.64px;
       height: 555px;
       background-color: rgba(0, 0, 0, 0.74);
       position: relative; } }
-  @media (min-width: 60rem) {
+  @media (min-width: 48rem) {
     .site-main .home-wrapper .home-img {
       background-color: rgba(0, 0, 0, 0.74);
       width: 100px;
@@ -781,7 +786,7 @@ div .secondary {
     width: 119.23px;
     height: 74px;
     border-bottom: 4px solid #fff; }
-    @media (min-width: 60rem) {
+    @media (min-width: 48rem) {
       .site-main .home-wrapper h2 {
         font-size: 46px;
         padding-top: 70px;
@@ -793,7 +798,7 @@ div .secondary {
     line-height: 40px;
     color: #fff;
     margin: 30px; }
-    @media (min-width: 60rem) {
+    @media (min-width: 48rem) {
       .site-main .home-wrapper p {
         width: 447px;
         height: 230px;
@@ -811,7 +816,7 @@ div .secondary {
     font-weight: 300;
     text-shadow: none;
     letter-spacing: 0.8px; }
-    @media (min-width: 60rem) {
+    @media (min-width: 48rem) {
       .site-main .home-wrapper .red-btn {
         padding: 10px;
         font-size: 24px;
@@ -828,7 +833,7 @@ div .secondary {
   font-size: 36px;
   line-height: 42px;
   color: #000000; }
-  @media (min-width: 60rem) {
+  @media (min-width: 48rem) {
     .link-title h2 {
       margin: 15px;
       padding: 21px 24px;
@@ -837,7 +842,7 @@ div .secondary {
 
 .links-wrapper {
   width: 480px; }
-  @media (min-width: 60rem) {
+  @media (min-width: 48rem) {
     .links-wrapper {
       -ms-flex-direction: row;
           flex-direction: row;
@@ -852,7 +857,7 @@ div .secondary {
     line-height: 40px;
     color: #000000;
     margin: 40px; }
-    @media (min-width: 60rem) {
+    @media (min-width: 48rem) {
       .links-wrapper p {
         padding: 30px 40px;
         margin: 15px 40px; } }
@@ -870,7 +875,7 @@ div .secondary {
     font-weight: 300;
     text-shadow: none;
     letter-spacing: 0.8px; }
-    @media (min-width: 60rem) {
+    @media (min-width: 48rem) {
       .links-wrapper .benifits .green-btn {
         display: block;
         width: 319px;
@@ -890,7 +895,7 @@ div .secondary {
     font-weight: 300;
     text-shadow: none;
     letter-spacing: 0.8px; }
-    @media (min-width: 60rem) {
+    @media (min-width: 48rem) {
       .links-wrapper .nw-program-page .green-btn {
         display: block;
         width: 319px;
@@ -907,7 +912,7 @@ div .secondary {
     font-weight: 300;
     text-shadow: none;
     letter-spacing: 0.8px; }
-    @media (min-width: 60rem) {
+    @media (min-width: 48rem) {
       .links-wrapper .involved .red-btn {
         display: block;
         width: 319px;
@@ -929,7 +934,7 @@ div .secondary {
       line-height: 42px;
       color: #000;
       margin: 35px; }
-      @media (min-width: 60rem) {
+      @media (min-width: 48rem) {
         .support-wrapper .information h2 {
           width: 852px;
           height: 55px;
@@ -942,7 +947,7 @@ div .secondary {
     .support-wrapper .information img {
       width: 287px;
       height: 470px; }
-      @media (min-width: 60rem) {
+      @media (min-width: 48rem) {
         .support-wrapper .information img {
           float: right;
           position: absolute;
@@ -954,7 +959,7 @@ div .secondary {
         line-height: 46px;
         color: #000;
         margin: 45px; }
-        @media (min-width: 60rem) {
+        @media (min-width: 48rem) {
           .support-wrapper .information img p {
             float: right;
             position: absolute;
@@ -966,7 +971,7 @@ div .secondary {
       line-height: 46px;
       color: #000;
       margin: 40px; }
-      @media (min-width: 60rem) {
+      @media (min-width: 48rem) {
         .support-wrapper .information p {
           width: 852px;
           font-family: "Noto Sans";
@@ -1132,7 +1137,7 @@ body p, li {
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   position: relative; }
-  @media (min-width: 60rem) {
+  @media (min-width: 48rem) {
     .main-philosophy {
       max-width: 950px;
       height: 640px; } }
@@ -1158,7 +1163,7 @@ body p, li {
     justify-content: space-around;
     flex-wrap: wrap;
     position: relative; }
-    @media (min-width: 60rem) {
+    @media (min-width: 48rem) {
       .main-philosophy .philosophy-grid {
         width: 300px;
         height: 300px;
@@ -1184,7 +1189,7 @@ body p, li {
       position: relative;
       width: 100%;
       height: 200px; }
-      @media (min-width: 60rem) {
+      @media (min-width: 48rem) {
         .main-philosophy .philosophy-grid .philosophy-img {
           -webkit-backface-visibility: hidden;
           backface-visibility: hidden; } }
@@ -1194,7 +1199,7 @@ body p, li {
         right: 63px;
         width: 70px;
         height: 70px; }
-        @media (min-width: 60rem) {
+        @media (min-width: 48rem) {
           .main-philosophy .philosophy-grid .philosophy-img img {
             left: 78px;
             top: 10px;
@@ -1216,7 +1221,7 @@ body p, li {
       bottom: -18px;
       line-height: 1.2;
       position: absolute; }
-      @media (min-width: 60rem) {
+      @media (min-width: 48rem) {
         .main-philosophy .philosophy-grid h2 {
           font-size: 1.4rem;
           -webkit-backface-visibility: hidden;
@@ -1239,7 +1244,7 @@ body p, li {
       overflow: hidden;
       padding: 5px;
       visibility: hidden; }
-      @media (min-width: 60rem) {
+      @media (min-width: 48rem) {
         .main-philosophy .philosophy-grid p {
           overflow: scroll;
           font-size: 1.2rem;
@@ -1257,16 +1262,16 @@ body p, li {
   background-color: #4fc8a1;
   border-radius: 6px;
   font-family: Noto Sans;
-  font-size: 20px;
+  font-size: 14px;
   font-weight: 700;
   text-align: center;
-  line-height: 30px;
+  line-height: 28px;
   color: #fff;
-  padding: 13px 50px;
-  font-weight: 300;
+  padding: 12px 39px;
   text-shadow: none;
-  letter-spacing: 0.8px; }
-  @media (min-width: 60rem) {
+  letter-spacing: .8px;
+  display: block; }
+  @media (min-width: 48rem) {
     .green-btn {
       display: block;
       width: 331px;
@@ -1280,7 +1285,7 @@ body p, li {
   box-sizing: border-box; }
 
 .about-wrapper {
-  max-width: 48rem;
+  max-width: 37.5rem;
   margin: 0 auto;
   padding-left: 1.25rem;
   padding-right: 1.25rem;
@@ -1298,8 +1303,7 @@ body p, li {
   margin-left: 0 auto; }
   .archive .site-content {
     margin: 0 auto;
-    padding-left: 20;
-    padding-right: 20; }
+    padding: 0 auto; }
   .archive .target {
     background-color: grey;
     width: 100%;
@@ -1317,7 +1321,7 @@ body p, li {
   padding-right: 10px; }
 
 .red-border-container {
-  width: 48rem;
+  width: 37.5rem;
   padding: 10px;
   height: auto;
   margin-bottom: 70px; }
@@ -1397,7 +1401,7 @@ site-main .a green-btn {
   box-sizing: border-box; }
 
 .nw-program-wrapper {
-  max-width: 48rem;
+  max-width: 37.5rem;
   height: auto;
   margin: 0 auto;
   padding-left: 1.25rem;
@@ -1520,7 +1524,12 @@ site-main .a green-btn {
 
 .mob-container {
   overflow-x: hidden;
-  max-width: 48rem;
-  margin: 0px auto;
-  padding: 40px 0;
-  border-bottom: solid 2px #4FC8A1; }
+  max-width: 37.5rem;
+  margin: 0px auto; }
+
+.content-wrapper {
+  border-bottom: solid 3px #4FC8A1;
+  max-width: 90%;
+  margin: 0 auto;
+  overflow: auto;
+  padding: 40px 0; }
