--- a/themes/montessori-theme/sass/_montessori.scss
+++ b/themes/montessori-theme/sass/_montessori.scss
@@ -2,9 +2,12 @@
 # Montessori
 --------------------------------------------------------------*/
 /////*Start History Section**/////
-body p,li{
-  font-size: $font_body_size_mob;
+
+body p,
+li {
+    font-size: $font_body_size_mob;
 }
+
 .main-history {
     margin: 0 auto;
 
@@ -26,6 +29,7 @@ body p,li{
     }
 }
 ////************philosophy Section ************/////
+
 .main-philosophy {
     margin: 100px auto;
     max-width: 90%;
@@ -42,7 +46,7 @@ body p,li{
         width: 100%;
     }
 
-    .philosophy-grid {
+    .philosophy-grid ,{
         display: -ms-flexbox;
         display: flex;
         -ms-flex-align: center;
@@ -63,15 +67,14 @@ body p,li{
             width: 300px;
             height: 300px;
             background-color: #AFF1D3;
-            -webkit-transition: 1.9s;
+            -webkit-transition: 3s;
             -webkit-transform-style: preserve-3d;
-            -moz-transition: 1.9s;
+            -moz-transition: 2s;
             -moz-transform-style: preserve-3d;
-            -o-transition: 1.9s;
+            -o-transition: 3s;
             -o-transform-style: preserve-3d;
-            transition: 1s;
+            transition: 3s;
             transform-style: preserve-3d;
-
             &:hover {
                 -webkit-backface-visibility: hidden;
                 -moz-backface-visibility: hidden;
@@ -107,10 +110,14 @@ body p,li{
                 width: 70px;
                 height: 70px;
                 @include desktop {
-                    left: 78px;
-                    top: 10px;
-                    width: 137px;
-                    height: 120px;
+                    left: 56px;
+                    top: 9px;
+                    width: 175px;
+                    height: 135px;
+                    -webkit-backface-visibility: hidden;
+                    -moz-backface-visibility: hidden;
+                    -o-backface-visibility: hidden;
+                    backface-visibility: hidden;
                 }
             }
         }
@@ -135,6 +142,16 @@ body p,li{
                 -moz-backface-visibility: hidden;
                 -o-backface-visibility: hidden;
                 backface-visibility: hidden;
+                &:hover {
+                    -webkit-backface-visibility: hidden;
+                    -moz-backface-visibility: hidden;
+                    -o-backface-visibility: hidden;
+                    backface-visibility: hidden;
+                    -webkit-transform: rotateY(180deg);
+                    -moz-transform: rotateY(180deg);
+                    -o-transform: rotateY(180deg);
+                    transform: rotateY(180deg);
+                }
             }
             position: absolute;
         }
@@ -174,29 +191,29 @@ body p,li{
         }
     }
 }
-//////************Start philosophy Section ************//////
-//////************End philosophy Section ************//////
+
+////************End philosophy Section ************/////
 ////////*******Start Materials Section******/////////
 ////////*******End Materials Section******/////////
 /////*Start Benefits Section**/////
+
 .benefits li {
     list-style-type: circle;
 }
 /*Start Resources Section  */
 .green-btn {
-  background-color: #4fc8a1;
-  border-radius: 6px;
-  font-family: Noto Sans;
-  font-size: 14px;
-  font-weight: 700;
-  text-align: center;
-  line-height: 28px;
-  color: #fff;
-  padding: 12px 39px;
-  text-shadow: none;
-  letter-spacing: .8px;
-  display: block;
-
+    background-color: #4fc8a1;
+    border-radius: 6px;
+    font-family: Noto Sans;
+    font-size: 14px;
+    font-weight: 700;
+    text-align: center;
+    line-height: 28px;
+    color: #fff;
+    padding: 12px 39px;
+    text-shadow: none;
+    letter-spacing: 0.8px;
+    display: block;
     @include desktop {
         display: block;
         width: 331px;
