--- a/themes/montessori-theme/style.css
+++ b/themes/montessori-theme/style.css
@@ -582,31 +582,6 @@ div .menu-primary-menu-container {
         padding: 15px 0;
         margin: 0 5px; } }
 
-div .secondary {
-  text-align: right;
-  max-width: 100%;
-  max-height: 100%;
-  font-family: "PT Sans";
-  text-align: right;
-  padding-right: 2rem;
-  margin-top: 20px;
-  background-color: #248E6A; }
-  @media (min-width: 48rem) {
-    div .secondary {
-      white-space: normal;
-      overflow: hidden;
-      padding: 5px 20 10px 10;
-      width: 100%; } }
-  div .secondary .active {
-    background-color: #4FC8A1; }
-  div .secondary li {
-    display: inline-block;
-    padding: 10px; }
-    div .secondary li a {
-      font-size: 1.3rem;
-      text-decoration: none;
-      color: white; }
-
 .responsive-menu-button {
   margin-top: 0.5rem !important; }
 
@@ -665,6 +640,31 @@ div .secondary {
 
 .home .site-header {
   position: absolute; }
+
+div .secondary {
+  text-align: right;
+  max-width: 100%;
+  max-height: 100%;
+  font-family: "PT Sans";
+  text-align: right;
+  padding-right: 2rem;
+  margin-top: 20px;
+  background-color: #248E6A; }
+  @media (min-width: 48rem) {
+    div .secondary {
+      white-space: normal;
+      overflow: hidden;
+      padding: 5px 20 10px 10;
+      width: 100%; } }
+  div .secondary .active {
+    background-color: #4FC8A1; }
+  div .secondary li {
+    display: inline-block;
+    padding: 10px; }
+    div .secondary li a {
+      font-size: 1.3rem;
+      text-decoration: none;
+      color: white; }
 
 /*--------------------------------------------------------------
 # Footer
@@ -1107,7 +1107,8 @@ body {
 /*--------------------------------------------------------------
 # Montessori
 --------------------------------------------------------------*/
-body p, li {
+body p,
+li {
   font-size: 1.3rem; }
 
 .main-history {
@@ -1168,13 +1169,13 @@ body p, li {
         width: 300px;
         height: 300px;
         background-color: #AFF1D3;
-        -webkit-transition: 1.9s;
+        -webkit-transition: 3s;
         -webkit-transform-style: preserve-3d;
-        -moz-transition: 1.9s;
+        -moz-transition: 2s;
         -moz-transform-style: preserve-3d;
-        -o-transition: 1.9s;
+        -o-transition: 3s;
         -o-transform-style: preserve-3d;
-        transition: 1s;
+        transition: 3s;
         transform-style: preserve-3d; }
         .main-philosophy .philosophy-grid:hover {
           -webkit-backface-visibility: hidden;
@@ -1201,10 +1202,12 @@ body p, li {
         height: 70px; }
         @media (min-width: 48rem) {
           .main-philosophy .philosophy-grid .philosophy-img img {
-            left: 78px;
-            top: 10px;
-            width: 137px;
-            height: 120px; } }
+            left: 56px;
+            top: 9px;
+            width: 175px;
+            height: 135px;
+            -webkit-backface-visibility: hidden;
+            backface-visibility: hidden; } }
     .main-philosophy .philosophy-grid h2 {
       z-index: 1;
       text-align: center;
@@ -1225,7 +1228,11 @@ body p, li {
         .main-philosophy .philosophy-grid h2 {
           font-size: 1.4rem;
           -webkit-backface-visibility: hidden;
-          backface-visibility: hidden; } }
+          backface-visibility: hidden; }
+          .main-philosophy .philosophy-grid h2:hover {
+            -webkit-backface-visibility: hidden;
+            backface-visibility: hidden;
+            transform: rotateY(180deg); } }
     .main-philosophy .philosophy-grid p {
       text-align: left;
       display: inline-block;
@@ -1269,7 +1276,7 @@ body p, li {
   color: #fff;
   padding: 12px 39px;
   text-shadow: none;
-  letter-spacing: .8px;
+  letter-spacing: 0.8px;
   display: block; }
   @media (min-width: 48rem) {
     .green-btn {
@@ -1523,6 +1530,7 @@ site-main .a green-btn {
   border-left: solid 8px #D93B57; }
 
 .mob-container {
+  transition: all .5s ease-out .5s;
   overflow-x: hidden;
   max-width: 37.5rem;
   margin: 0px auto; }
