--- a/themes/montessori-theme/sass/_front-page.scss
+++ b/themes/montessori-theme/sass/_front-page.scss
@@ -3,12 +3,12 @@
 // media screen for mobile (max-width: 480px)
 .site-main {
     .home-wrapper {
-        width: 480px;
+        // width: 480px;
         height: 585px;
         background-color: rgba(0,0,0,0.74);
 
         @include desktop{
-          width: 541.64px;
+          // width: 541.64px;
           height: 555px;
           background-color: rgba(0,0,0,0.74);
           position: relative;
@@ -16,11 +16,14 @@
         .home-img{
           @include desktop{
             background-color: rgba(0,0,0,0.74);
-            width: 1264px;
+            width: 100%;
             height: 555px;
             z-index: -1;
             position: absolute;
           }
+img{
+    width: 100%;
+}
         }
 
         h2 {
@@ -191,10 +194,11 @@ h2 {
 }
 // this is for the support section
 .support-wrapper {
-    width: 480px;
-    height: auto;
+    // width: 480px;
+    // height: auto;
     .information {
       height: auto;
+      position: relative;
         h2 {
             border-top: 2px solid #2EB688;
             width: 377px;
@@ -205,7 +209,7 @@ h2 {
             color: #000;
             margin: 35px;
             @include desktop{
-              width: 852px;
+              // width: 852px;
               height: 55px;
               font-family: "Asap";
               font-size: 48px;
@@ -219,12 +223,12 @@ h2 {
             width: 287px;
             height: 470px;
             @include desktop{
-              float: right;
+              display: inline-flex;
               position: absolute;
               right: 35px;
             }
             p {
-                width: 470px;
+                // width: 470px;
                 font-family: "Noto Sans";
                 font-size: 20px;
                 line-height: 46px;
@@ -239,14 +243,14 @@ h2 {
 
         }
         p {
-            width: 377px;
+            // width: 377px;
             font-family: "Noto Sans";
             font-size: 20px;
             line-height: 46px;
             color: #000;
             margin: 40px;
             @include desktop{
-              width: 852px;
+              // width: 852px;
               // height: 184px;
               font-family: "Noto Sans";
               font-size: 22px;
